--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </aside>
                     <div class="col-md-10">
                         <div class="tab-content">
-                            <div class="tab-pane active" class="bebidas-sem-alcool">
+                            <div class="tab-pane active" id="bebidas-sem-alcool">
                                 <div class="row">
                                     <div class="col-md-3">
                                         <img class="d-block w-100" src="images/cardapio/bebidas/coca-cola.jpg" alt="coca-cola" />
@@ -194,28 +194,7 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="Nome da entrada" />
-                                        <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="Nome da entrada" />
-                                        <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="Nome da entrada" />
-                                        <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="Nome da entrada" />
-                                        <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
+                                        <h5 class="text-colored fw-bold mt-2">Tábua de frios</h5>
                                             <p>
                                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             </p>
@@ -224,20 +203,6 @@
                             </div>
                             <div class="tab-pane" id="pratos-principais">
                                 <div class="row">
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/pratos/pizza.jpg" alt="Pizza" />
-                                        <h5 class="text-colored fw-bold mt-2">Pizza</h5>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="Salmão" />
-                                        <h5 class="text-colored fw-bold mt-2">Salmão</h5>
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            </p>
-                                    </div>
                                     <div class="col-md-3">
                                         <img class="d-block w-100" src="images/cardapio/pratos/pizza.jpg" alt="Pizza" />
                                         <h5 class="text-colored fw-bold mt-2">Pizza</h5>
